# hs-isbn

./: .gitignore  CHANGELOG.md  Makefile  README.md  default.nix  flake.nix  isbn.cabal  nixpkgs.json  shell.nix
.github/workflows/: ci.yml
lib/Data/: ISBN.hs
lib/Data/ISBN/: ISBN10.hs  ISBN13.hs  Types.hs
test/: Spec.hs
test/Data/: ISBNSpec.hs
test/Data/ISBN/: ISBN10Spec.hs  ISBN13Spec.hs
